--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,2 +1,8 @@
-body {background-color: black;
-color: white;}
+#carouselExampleFade,.carousel-inner,.carousel-item {
+    height: 500px;
+}
+
+.carousel-item img {
+    height: 100%;
+    object-fit: cover;
+}
