--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,3 +6,16 @@
     height: 100%;
     object-fit: cover;
 }
+.carousel-inner {
+    position: relative;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.445);
+    z-index: 1;
+}
